--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.25",
     "vue": "2.6.10",
@@ -62,7 +62,7 @@
     "vue-template-compiler": "2.6.10",
     "vuex-module-decorators": "^0.9.9",
     "webpack": "4.32.2",
-    "webpack-cli": "^3.3.2",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "3.4.1",
     "webpack-hot-middleware": "2.25.0"
   },
